//unary and serverstreaming
syntax = "proto3";

package smartparking;

service SmartParking {
  rpc CheckEntry (CarRequest) returns (CarResponse);
  rpc GetParkingAvailability (Empty) returns (stream ParkingUpdate);
}

message CarRequest {
  string registrationPlate = 1; // changed from registration_plate
}

message CarResponse {
  bool approved = 1;
  string message = 2;
}

message Empty {}

message ParkingUpdate {
  int32 availableSpaces = 1; // changed from available_spaces
  string timestamp = 2;
}
